tdf#130945 Writer: Preview of linked doc is not updated when edited

Change-Id: Id8ee653cc9cb5dbcb3ad0a31688a0b5e34d99fff